fix: calendar using wrong colors in dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,6 +31,24 @@
 			transform: scaleX(-1);
 		}
 	}
+
+	@mixin dark {
+		.mantine-TimePicker-control,
+		.mantine-DateTimePicker-day,
+		.mantine-MonthPickerInput-monthsListControl,
+		.mantine-MonthPickerInput-yearsListControl {
+			&[data-in-range='true'] {
+				@apply bg-dark-400;
+			}
+
+			&[data-first-in-range='true'],
+			&[data-last-in-range='true'],
+			&[data-selected='true'],
+			&[data-active='true'] {
+				@apply bg-white text-dark-600;
+			}
+		}
+	}
 }
 
 button,
